öneri mekanızması ve yapay zeka ile ilgili iyileştirme güncelleme düzeltme optimize çalışmaları..